--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 body{
     background-color:#ccc;
     color:black;
     font-size: 16px;
     font-family: 'Oxygen', sans-serif;
 }
-#header-nav{
-    background-color:grey;
+.bg-body-tertiary{
+    background-color:gray;
     border-bottom: 4px solid black;
     border-top: 4px solid black;
     border-radius: 0;
+    padding: 0;
+   
 }
-div.container{
-    padding-bottom: 20px;
+
+div.container-fluid{
+    padding-bottom:20px;
     border:0px solid gray;
+    background-color: gray;
     
 }
+.navbar-brand{
+    padding-top: 25px;
+}
 #logo-img{
-    background: url("../image/fish.jpg") no-repeat;
     width: 150px;
     height: 150px;
 
 }
+a.navbar-brand{
+    text-transform: uppercase;
+    display: flex;
+}
+.image-text{
+    margin-left: -15px;
+    margin-top: 130px;
+    font-family: 'Oswald', sans-serif;
+    text-shadow: 1px 1px 1px;
+}
+#fastfood{
+    width: 40px;
+    height: 40px;
+    margin-top: 30px;
+}
+a span:hover, a span:active {
+    text-decoration: none;
+    color: blue;
+    }
+button.navbar-toggler{
+    border: 2px solid black;
+}  
+#button{
+    position: relative;
+    float: right;
+}
+span.navbar-toggler-icon{
+    width: 2em;
+    height: 2em;
+}
+.navbar-nav{
+    font-size: 20px;
+    font-weight: bold;
+    border: 2px solid black;
+    text-align: center;
+    font-family: 'oswald', sans-serif;
 
-
+}
+a.nav-link{
+ border-bottom: 1px solid black;
+}
 
 
 
@@ -65,7 +111,7 @@ h1{
     color:black;
     text-align: justify;
     padding: 5px;
-    background-color: grey;
+    background-color:grey;
     height: 103px;
     margin-bottom: 0px;
     margin-top: 0px;
