--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 body{
-    background-color:#ccc;
+    background-color:white;
     color:black;
     font-size: 16px;
     font-family: 'Oxygen', sans-serif;
@@ -13,6 +13,10 @@ body{
     padding: 0;
    
 }
+div .nav-link:hover, div .nav-link:active{
+    background-color:whitesmoke; 
+ }
+
 
 div.container-fluid{
     padding-bottom:20px;
@@ -43,10 +47,13 @@ a.navbar-brand{
     height: 40px;
     margin-top: 30px;
 }
-a span:hover, a span:active {
-    text-decoration: none;
-    color: blue;
-    }
+.navbar-toggler-icon:hover, .navbar-toggler-icon:active{
+    background-color: rgb(183, 186, 186);
+} 
+button.navebar-toggler:hover, button.navbar-toggler:active{
+    background-color: rgb(183, 186, 186); 
+}
+
 button.navbar-toggler{
     border: 2px solid black;
 }  
@@ -126,8 +133,6 @@ h1{
     margin-bottom: 20px;
 }
 
-
-
 .row{
     width: 100%;
 }
@@ -136,7 +141,7 @@ h1{
 .col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,
 .col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12{
     float: left;
-    border: 2px solid #ccc;
+    border: 2px solid white;
 }
 .col-lg-1{
     width: 8.33%;
@@ -178,7 +183,7 @@ h1{
     .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,
     .col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12{
         float: left;
-        border: 2px solid #ccc;
+        border: 2px solid white;
     }
     .col-md-1{
         width: 8.33%;
