--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ body{
     padding: 0;
    
 }
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 div .nav-link:hover, div .nav-link:active{
     background-color:whitesmoke; 
  }
