--- a/css/style.css
+++ b/css/style.css
@@ -1,145 +1,165 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 body{
-    background-color:white;
+    background-color:rgb(139, 184, 194);
     color:black;
     font-size: 16px;
     font-family: 'Oxygen', sans-serif;
 }
-.bg-body-tertiary{
-    background-color:gray;
-    border-bottom: 4px solid black;
-    border-top: 4px solid black;
-    border-radius: 0;
-    padding: 0;
-   
-}
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-div .nav-link:hover, div .nav-link:active{
-    background-color:whitesmoke; 
- }
-
-
-div.container-fluid{
-    padding-bottom:20px;
-    border:0px solid gray;
-    background-color: gray;
-    
-}
-.navbar-brand{
-    padding-top: 25px;
-}
-#logo-img{
-    width: 150px;
-    height: 150px;
-
-}
-a.navbar-brand{
-    text-transform: uppercase;
-    display: flex;
-}
-.image-text{
-    margin-left: -15px;
-    margin-top: 130px;
-    font-family: 'Oswald', sans-serif;
-    text-shadow: 1px 1px 1px;
-}
-#fastfood{
-    width: 40px;
-    height: 40px;
-    margin-top: 30px;
-}
-.navbar-toggler-icon:hover, .navbar-toggler-icon:active{
-    background-color: rgb(183, 186, 186);
-} 
-button.navebar-toggler:hover, button.navbar-toggler:active{
-    background-color: rgb(183, 186, 186); 
-}
-
-button.navbar-toggler{
-    border: 2px solid black;
-}  
-#button{
-    position: relative;
-    float: right;
-}
-span.navbar-toggler-icon{
-    width: 2em;
-    height: 2em;
-}
-.navbar-nav{
-    font-size: 20px;
-    font-weight: bold;
-    border: 2px solid black;
-    text-align: center;
-    font-family: 'oswald', sans-serif;
-
-}
-a.nav-link{
- border-bottom: 1px solid black;
-}
-
-
 
 *{box-sizing: border-box;}
 h1{
     text-align: center;
+}
+
+.container-fluid{
+    border-bottom:3px solid black;
+    background-color:gray;
     
 }
-.food h2{
-    border: 2px solid black;
-    width: fit-content;
-    font-size: 24px;
-    color: #333;
-    background-color: red;
-    margin: 0;
-    padding: 10px; 
-    }
-.food h3{
-    border: 2px solid black;
-    width: fit-content;
-    font-size: 24px;
-    color: #333;
-    background-color:antiquewhite;
-    margin: 0;
-    padding: 10px; 
-    }
-.food h4{
-    border: 2px solid black;
-    width: fit-content;
-    font-size: 24px;
-    color: #333;
-    background-color: pink;
-    margin: 0;
-    padding: 10px; 
+.navbar.bg-body-tertiary{
+  padding: 0px;
+   
+}
+#fishpic{
+    margin-right: 7px;
+    width: 90px;
+    height: 80px;
     
+}
+div.container section{
+    background-color: gray;
+    margin-left: 0px;
+   
+}
+.container-fluid.footer{
+    background-color: gray;
     }
-.food p{
-    border: 0px solid #ccc;
-    font-size: 16px;
-    color:black;
-    text-align: justify;
-    padding: 5px;
-    background-color:grey;
-    height: 103px;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    margin-bottom: 20px;
+    button.navbar-toggler.ms-auto.d-block.d-sm-none{
+        margin-bottom: 3px;
     }
-.food{
-    background-color:grey;
+.container.bigpic{
+    margin-top: 1px;
+}
+    
+ 
+
+hr{
+    margin-left: 25px ;
+}
+a.navbar-brand:link, a.navbar-brand:visited{
+    text-shadow:1px 1px 1px skyblue;
+    color: skyblue;
+}
+a.navbar-brand:hover, a.navbar-brand:active{
+    color: blue;
+}
+span.material-symbols-outlined{
+    width: 20px;
+    height: 50px;
+    font-size: 50px;
+    color: blue;
+}
+a.nav-link.material-symbols-outlined{
+    color: red;
+    padding: 0;
+    font-size: 1.5em;
+    padding-right: 2px;
+    padding-left: 16px;
+}
+ul span{
+    font-size: 20px;
+}
+ul li:nth-child(2) .material-symbols-outlined{
+margin-left: 2px;
+}
+ul span:hover, ul span:active{
+    color: red;
+}
+div ul a{
+    border: 1px 1px 1px solid black;
+}
+.navbar-nav li{
     border: 2px solid black;
     text-align: center;
-    margin-left: 10px;
-    margin-top:10px;
-    margin-bottom: 20px;
 }
+footer{
+    background-color: gray;
+    border-top:1px solid black;
+    height: auto;
+    margin-top: auto;
+} 
+
+.container-fluid.second{
+    padding-bottom: 9px;
+    
+    
+}
+.container-fluid.home{
+    background-color: rgb(139, 184, 194);
+    
+}
+#menu-title,#map-title{
+    border: 2px solid black;
+    width:auto;
+    height:250px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    position: relative;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+#menu-title:hover,#map-title:hover{
+    box-shadow: 0 1px 5px 1px rgb(57, 75, 82);
+}
+#menu-title{ 
+    background: url('../images/menu_resized.jpg')no-repeat;
+    background-position: center;
+    
+}
+#menu-title span , #map-title span{
+    position:absolute;
+    text-align: center;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    font-size: 1.6em;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    opacity: .8;
+}
+.container-fluid.category{
+    background-color:rgb(139, 184, 194) ;
+    border: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .row{
     width: 100%;
@@ -149,8 +169,8 @@ h1{
 .col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,
 .col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12{
     float: left;
-    border: 2px solid white;
 }
+
 .col-lg-1{
     width: 8.33%;
     }
@@ -187,12 +207,13 @@ h1{
 .col-lg-12{
     width:100%;
 }}
-@media (min-width:950px) and (max-width:1199px){
+@media (min-width:992px) and (max-width:1199px){
     .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,
     .col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12{
         float: left;
-        border: 2px solid white;
+        
     }
+    
     .col-md-1{
         width: 8.33%;
     }
@@ -229,4 +250,105 @@ h1{
     .col-md-12{
         width:100%;
     }}
+   @media (min-width:830px) and (max-width:991px){
+    .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,
+    .col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12{
+        float: left;
+        margin-left: auto;
+        margin-right: auto;
+        } 
+       
 
+    .col-sm-1{
+        width: 8.33%;
+    }
+    .col-sm-2{
+        width: 16.66%;
+    }
+    .col-sm-3{
+        width: 25%;
+    }
+    .col-sm-4{
+        width: 33%;
+    }
+    .col-sm-5{
+        width:41.66%;
+    }
+    .col-sm-6{
+        width:50%;
+    }
+    .col-sm-7{
+        width:58.33%;
+    }
+    .col-sm-8{
+        width:66.66%;
+    }
+    .col-sm-9{
+        width:74.99%;
+    }
+    .col-sm-10{
+        width:83.33%;
+    }
+    .col-sm-11{
+        width:91.66%;
+    }
+    .col-sm-12{
+        width:100%;
+    }}
+    @media (max-width:829px){
+        .col-xs-1,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,
+        .col-xs-7,.col-xs-8,.col-xs-9,.col-xs-10,.col-xs-11,.col-xs-12{
+            float: left;
+            } 
+            #menu-title{
+                margin:12px auto 12px;
+                width: 350px;}
+    
+        .col-xs-1{
+            width: 8.33%;
+        }
+        .col-xs-2{
+            width: 16.66%;
+        }
+        .col-xs-3{
+            width: 25%;
+        }
+        .col-xs-4{
+            width: 33%;
+        }
+        .col-xs-5{
+            width:41.66%;
+        }
+        .col-xs-6{
+            width:50%;
+        }
+        .col-xs-7{
+            width:58.33%;
+        }
+        .col-xs-8{
+            width:66.66%;
+        }
+        .col-xs-9{
+            width:74.99%;
+        }
+        .col-xs-10{
+            width:83.33%;
+        }
+        .col-xs-11{
+            width:91.66%;
+        }
+        .col-xs-12{
+            width:100%;
+        }}
+    
+    
+    
+    
+    
+    
+    
+    #menu-title{
+        margin:15px auto 15px;
+        width: 379px;
+       } 
+   
